jena-shex/src/test/files/spec/negativeSyntax/1iriMaxexclusive.shex
<http://a.example/IssueShape> {
   <http://a.example/p1> IRI MAXEXCLUSIVE "^ab$"
}
